--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
     border-radius: 4px;
 }
 .search-select{
-    background-color: #F3F3F3;
+    background-color: #fedb68;
     width: 50px;
     text-align: center;
     border-top-left-radius: 4px;
@@ -102,5 +102,33 @@ span{
     margin-left: 15px;
 }
 .panel-ops{
-    width: 70%;
+    width: 60%;
+}
+.hero-section{
+    background-image: url("file:///D:/Downloads/Car_Acc_3000x1200._CB584942067_.jpg");
+    background-size: cover;
+    height: 100%;
+}
+.shop-section{ 
+    display: flex;
+    justify-content: space-evenly;
+}
+.box{
+    margin-top: 20%;
+    margin-right: 5px;
+    font-size: 1rem;
+    width: 23%;
+    height: 400px;
+    border: 2px solid black;
+    padding: 20px 0px 15px;
+}
+.box-content{
+    margin-top: 2;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.box-img{
+    height: 300px;
+    background-size: cover ;
 }
